--- a/H_WorkTools/Dailog/AlarmView.xaml
+++ b/H_WorkTools/Dailog/AlarmView.xaml
@@ -8,6 +8,7 @@
              mc:Ignorable="d"              
              Canvas.Top="200"
              Canvas.Left="0"
+             Loaded="UserControl_Loaded"
              Height="360" Width="400">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -26,16 +27,17 @@
             <TextBlock Text="{Binding Title}" Padding="5" FontSize="14" Margin="5,0"/>
         </md:ColorZone>
         <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding TxtTitle}" Margin="15,5" md:HintAssist.Hint="Title" Height="30" TextWrapping="Wrap" MaxLength="20"/>
-        <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding TxtTitle}" Margin="15,5" md:HintAssist.Hint="Content" Height="100" AcceptsReturn="True" MaxLength="1000" 
+        <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding TxtContent}" Margin="15,5" md:HintAssist.Hint="Content" Height="100" AcceptsReturn="True" MaxLength="1000" 
                  TextWrapping="Wrap" VerticalAlignment="Top"  VerticalScrollBarVisibility="Auto" Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-        <ComboBox Grid.Row="3" Grid.Column="0" x:Name="cbType" Margin="15,5" SelectionChanged="cbType_SelectionChanged">
+        <ComboBox Grid.Row="3" Grid.Column="0" x:Name="cbType" Margin="15,5" SelectionChanged="cbType_SelectionChanged" SelectedIndex="{Binding CbType}">
             <ComboBoxItem>指定</ComboBoxItem>
             <ComboBoxItem>每周</ComboBoxItem>
             <ComboBoxItem>每月</ComboBoxItem>
         </ComboBox>
-        <md:TimePicker Grid.Row="3" Grid.Column="1" x:Name="TimePicker" Is24Hours="True" Margin="15,5"/>
+        <md:TimePicker Grid.Row="3" Grid.Column="1" x:Name="TimePicker" Is24Hours="True" Margin="15,5" Text="{Binding TxtTime}"/>
         <!--指定日期-->
-        <DatePicker x:Name="DatePicker" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="15,5" Visibility="Hidden"/>
+        <DatePicker Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" x:Name="DatePicker" Margin="15,5" Visibility="Hidden"/>
+        <TextBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" x:Name="DatePickerValue" Text="{Binding TxtDate}" Visibility="Hidden"/>
 
         <!--每周-->
         <Grid  Grid.Row="4" Grid.ColumnSpan="2" Margin="15,5" x:Name="StackPanel_W" Visibility="Hidden">
@@ -53,13 +55,13 @@
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <CheckBox Grid.Row="0" Grid.Column="0" IsChecked="False" Content="周一"/>
-            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="False" Content="周二"/>
-            <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="False" Content="周三"/>
-            <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="False" Content="周四"/>
-            <CheckBox Grid.Row="0" Grid.Column="4" IsChecked="False" Content="周五"/>
-            <CheckBox Grid.Row="0" Grid.Column="5" IsChecked="False" Content="周六"/>
-            <CheckBox Grid.Row="0" Grid.Column="6" IsChecked="False" Content="周日"/>
+            <CheckBox Grid.Row="0" Grid.Column="0" IsChecked="False" DataContext="1" Content="周一"/>
+            <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="False" DataContext="2" Content="周三"/>
+            <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="False" DataContext="3" Content="周四"/>
+            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="False" DataContext="4" Content="周二"/>
+            <CheckBox Grid.Row="0" Grid.Column="4" IsChecked="False" DataContext="5" Content="周五"/>
+            <CheckBox Grid.Row="0" Grid.Column="5" IsChecked="False" DataContext="6" Content="周六"/>
+            <CheckBox Grid.Row="0" Grid.Column="6" IsChecked="False" DataContext="7" Content="周日"/>
         </Grid>
         <!--每月-->
         <Grid Grid.Row="4" Grid.ColumnSpan="2" Margin="15,5" x:Name="StackPanel_M" Visibility="Hidden">
@@ -80,44 +82,43 @@
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <CheckBox Grid.Row="0" Grid.Column="0" IsChecked="False" Content="1"/>
-            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="False" Content="2"/>
-            <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="False" Content="3"/>
-            <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="False" Content="4"/>
-            <CheckBox Grid.Row="0" Grid.Column="4" IsChecked="False" Content="5"/>
-            <CheckBox Grid.Row="0" Grid.Column="5" IsChecked="False" Content="6"/>
-            <CheckBox Grid.Row="0" Grid.Column="6" IsChecked="False" Content="7"/>
-            <CheckBox Grid.Row="0" Grid.Column="7" IsChecked="False" Content="8"/>
-            <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="False" Content="9"/>
-            <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="False" Content="10"/>
-            <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="False" Content="11"/>
-            <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="False" Content="12"/>
-            <CheckBox Grid.Row="1" Grid.Column="4" IsChecked="False" Content="13"/>
-            <CheckBox Grid.Row="1" Grid.Column="5" IsChecked="False" Content="14"/>
-            <CheckBox Grid.Row="1" Grid.Column="6" IsChecked="False" Content="15"/>
-            <CheckBox Grid.Row="1" Grid.Column="7" IsChecked="False" Content="16"/>
-            <CheckBox Grid.Row="2" Grid.Column="0" IsChecked="False" Content="17"/>
-            <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="False" Content="18"/>
-            <CheckBox Grid.Row="2" Grid.Column="2" IsChecked="False" Content="19"/>
-            <CheckBox Grid.Row="2" Grid.Column="3" IsChecked="False" Content="20"/>
-            <CheckBox Grid.Row="2" Grid.Column="4" IsChecked="False" Content="21"/>
-            <CheckBox Grid.Row="2" Grid.Column="5" IsChecked="False" Content="22"/>
-            <CheckBox Grid.Row="2" Grid.Column="6" IsChecked="False" Content="23"/>
-            <CheckBox Grid.Row="2" Grid.Column="7" IsChecked="False" Content="24"/>
-            <CheckBox Grid.Row="3" Grid.Column="0" IsChecked="False" Content="25"/>
-            <CheckBox Grid.Row="3" Grid.Column="1" IsChecked="False" Content="26"/>
-            <CheckBox Grid.Row="3" Grid.Column="2" IsChecked="False" Content="27"/>
-            <CheckBox Grid.Row="3" Grid.Column="3" IsChecked="False" Content="28"/>
-            <CheckBox Grid.Row="3" Grid.Column="4" IsChecked="False" Content="29"/>
-            <CheckBox Grid.Row="3" Grid.Column="5" IsChecked="False" Content="30"/>
-            <CheckBox Grid.Row="3" Grid.Column="6" IsChecked="False" Content="31"/>
+            <CheckBox Grid.Row="0" Grid.Column="0" IsChecked="False" DataContext="1" Content="1"/>
+            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="False" DataContext="2" Content="2"/>
+            <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="False" DataContext="3" Content="3"/>
+            <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="False" DataContext="4" Content="4"/>
+            <CheckBox Grid.Row="0" Grid.Column="4" IsChecked="False" DataContext="5" Content="5"/>
+            <CheckBox Grid.Row="0" Grid.Column="5" IsChecked="False" DataContext="6" Content="6"/>
+            <CheckBox Grid.Row="0" Grid.Column="6" IsChecked="False" DataContext="7" Content="7"/>
+            <CheckBox Grid.Row="0" Grid.Column="7" IsChecked="False" DataContext="8" Content="8"/>
+            <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="False" DataContext="9" Content="9"/>
+            <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="False" DataContext="10" Content="10"/>
+            <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="False" DataContext="11" Content="11"/>
+            <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="False" DataContext="12" Content="12"/>
+            <CheckBox Grid.Row="1" Grid.Column="4" IsChecked="False" DataContext="13" Content="13"/>
+            <CheckBox Grid.Row="1" Grid.Column="5" IsChecked="False" DataContext="14" Content="14"/>
+            <CheckBox Grid.Row="1" Grid.Column="6" IsChecked="False" DataContext="15" Content="15"/>
+            <CheckBox Grid.Row="1" Grid.Column="7" IsChecked="False" DataContext="16" Content="16"/>
+            <CheckBox Grid.Row="2" Grid.Column="0" IsChecked="False" DataContext="17" Content="17"/>
+            <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="False" DataContext="18" Content="18"/>
+            <CheckBox Grid.Row="2" Grid.Column="2" IsChecked="False" DataContext="19" Content="19"/>
+            <CheckBox Grid.Row="2" Grid.Column="3" IsChecked="False" DataContext="20" Content="20"/>
+            <CheckBox Grid.Row="2" Grid.Column="4" IsChecked="False" DataContext="21" Content="21"/>
+            <CheckBox Grid.Row="2" Grid.Column="5" IsChecked="False" DataContext="22" Content="22"/>
+            <CheckBox Grid.Row="2" Grid.Column="6" IsChecked="False" DataContext="23" Content="23"/>
+            <CheckBox Grid.Row="2" Grid.Column="7" IsChecked="False" DataContext="24" Content="24"/>
+            <CheckBox Grid.Row="3" Grid.Column="0" IsChecked="False" DataContext="25" Content="25"/>
+            <CheckBox Grid.Row="3" Grid.Column="1" IsChecked="False" DataContext="26" Content="26"/>
+            <CheckBox Grid.Row="3" Grid.Column="2" IsChecked="False" DataContext="27" Content="27"/>
+            <CheckBox Grid.Row="3" Grid.Column="3" IsChecked="False" DataContext="28" Content="28"/>
+            <CheckBox Grid.Row="3" Grid.Column="4" IsChecked="False" DataContext="29" Content="29"/>
+            <CheckBox Grid.Row="3" Grid.Column="5" IsChecked="False" DataContext="30" Content="30"/>
+            <CheckBox Grid.Row="3" Grid.Column="6" IsChecked="False" DataContext="31" Content="31"/>
         </Grid>
-
         <StackPanel Grid.Row="5" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Left" Margin="200,0,0,0" >
             <Button Content="Cancel" Margin="0,0,10,0" Width="80"
-                    Command="{Binding CancelCommand}"
+                    Command="{Binding CancelCommand}" 
                     Style="{StaticResource MaterialDesignOutlinedButton}" Cursor="Hand"/>
-            <Button Content="OK"   Width="80"  Command="{Binding SureCommand}"/>
+            <Button Content="OK"   Width="80"  Command="{Binding SureCommand}" Click="Button_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
